fixed the graph bug on iphone
graph, labels and text was massed together, this fixes it

--- a/css/beregner.css
+++ b/css/beregner.css
@@ -109,6 +109,14 @@
   font-size: 20px;
 }
 
+#graf {
+  height: 100px;
+}
+
+#labels {
+  height: 30px;
+}
+
 .float-wrap {
   width: 100%;
 }
